# MaintAlign

./: .gitignore  CONTRIBUTING.md  README.md  baseline.py  csv_loader.py  decomposer.py  evaluator.py  generator.py  instance.py  journal_entry_2.qmd  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  simulator.py  solver.py  streamlit_app.py  visualizer.py
.github/workflows/: ci.yml
.streamlit/: config.toml
analysis/: __init__.py  evaluator.py  simulator.py
core/: __init__.py  baseline.py  decomposer.py  instance.py  solver.py  validators.py
data/: example_chains.csv  example_machines.csv
docs/: README.md
examples/: 01_quick_start.py  02_custom_instance.py  03_csv_workflow.py  04_monte_carlo.py  README.md
examples/sample_data/: example_chains.csv  example_machines.csv
experiments/: README.md
experiments/scripts/: generate_figures.py  run_all.sh  run_baselines.py  run_montecarlo.py  run_scalability.py
tests/: __init__.py  conftest.py  test_csv_loader.py  test_smoke.py  test_validators.py
utils/: __init__.py  csv_loader.py  generator.py  visualizer.py
