[project]
name = "maintalign"
version = "0.4.0"
description = "Resource-constrained preventive maintenance scheduling with production chains."
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "Zhanybek Sharsheev" },
]
dependencies = [
    "ortools>=9.8",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "streamlit>=1.30",
    "plotly>=5.18",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
include = ["core*", "analysis*", "utils*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

# ── Ruff: linter + formatter ──────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".venv",
    "results",
    "experiments/results",
    "experiments/figures",
    "_extensions",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import order)
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — enforced by formatter
    "B008",  # mutable default arg — we use this intentionally in a few places
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]         # allow `assert False` in tests
"examples/*" = ["E402"]       # sys.path mutation before imports is intentional

# ── Pytest configuration ──────────────────────────────────
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
]
